--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 body {
   background-color: rgb(254,255,246);
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 section {
@@ -11,16 +13,15 @@ section {
   padding: 1em;
 }
 
-span {
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-p {
-  line-height: 2em;
+.header {
+  position: relative;
+  display: block;
+  height: auto;
+  height: 116px;
 }
 
 .smiley {
+  display: block;
   height: 100%;
   max-height: 116px;
   width: 100%;
@@ -29,9 +30,32 @@ p {
 }
 
 .logo {
-  height: 100%;
-  max-height: 116px;
-  width: 100%;
-  max-width: 460px;
+  display: block;
   float: left;
+}
+
+input[type="text"] {
+  width: 32%;
+  float: left;
+}
+
+.input {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 2em 0;
+}
+
+.output {
+  padding: 1em 0;
+  clear: both;
+}
+
+p {
+  line-height: 2em;
+}
+
+span {
+  font-weight: bold;
+  text-decoration: underline;
 }
